--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+    <!-- navbar start here -->
     <nav class="navbar navbar-expand-lg p-0">
         <div class="container">
             <a class="navbar-brand p-0" href="#">
@@ -42,8 +43,9 @@
             </div>
         </div>
     </nav>
+    <!-- navbar end here -->
 
-
+    <!-- search start here -->
     <section class="serch-input container ">
         <div class="input-group p-5 w-75 m-auto ">
             <span class="input-group-text btn border ">
@@ -53,18 +55,19 @@
             <button id="search-btn" onclick="itemCallByName()" class="input-group-text btn-secondary">Search</button>
         </div>
     </section>
+    <!-- search end here -->
 
-
+    <!-- all food show here -->
     <section class="food-card-area ">
 
     </section>
 
-
+    <!-- food details show here -->
     <section id="food-datails-shower">
 
     </section>
 
-
+    <!-- all script added here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
