--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Hungry-Monster</title>
 </head>
@@ -17,10 +20,11 @@
     <nav class="navbar navbar-expand-lg p-0">
         <div class="container">
             <a onClick="window.location.reload();" class="w-25 navbar-brand p-0 ms-50px" href="#">
-                <img class="brand-logo" width="100"  src="images/logo.jpg" alt="">
+                <img class="brand-logo" width="100" src="images/logo.jpg" alt="">
             </a>
-            <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-               Menu
+            <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav">
+                Menu
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
